<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <!-- 首先定义标题栏 -->

    <RelativeLayout
        android:id="@+id/biaoti"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#3399ff">

        <Button
            android:id="@+id/button_backward"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:drawablePadding="6dp"
            android:background="#3399ff"
            android:ellipsize="end"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="返回"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/search"
            android:layout_width="146dp"
            android:layout_height="52dp"
            android:layout_alignBottom="@+id/button_backward"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="-11dp"
            android:layout_toStartOf="@+id/button_forward"
            android:layout_toEndOf="@+id/button_backward"
            android:background="#3399ff"
            android:text="注册"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="85dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/biaoti"
        android:layout_marginBottom="-33dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email2"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/register"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignBottom="@+id/email"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-128dp"
        android:background="#32cd32"
        android:text="注册"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nickname"
        android:layout_alignBottom="@+id/nickname"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-32dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email3"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/sex"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nickname"
        android:layout_alignBottom="@+id/nickname"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="-63dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email4"
         />

    <EditText
        android:id="@+id/age"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sex"
        android:layout_alignBottom="@+id/sex"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-33dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email5"
        android:inputType="number" />

    <EditText
        android:id="@+id/address"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/age"
        android:layout_alignBottom="@+id/age"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-33dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email6"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/address"
        android:layout_alignBottom="@+id/address"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-32dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email7"
        android:inputType="number" />

    <EditText
        android:id="@+id/email"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-33dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/prompt_email8"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/height"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-68dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="身高(cm)"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-102dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="体重(kg)"
        android:inputType="textEmailAddress" />

</RelativeLayout>